infra/istio/destinationrule/destinationrule-movie.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: movie-service
  namespace: movie
spec:
  host: movie-service.movie.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
      http:
        http1MaxPendingRequests: 5
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
