infra/istio/destinationrule/destinationrule-notification.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: notification-service
  namespace: notification
spec:
  host: notification-service.notification.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
      http:
        http1MaxPendingRequests: 5
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
